tests/baselines/reference/excessPropertyCheckWithUnions.errors.txt
tests/cases/compiler/excessPropertyCheckWithUnions.ts(11,1): error TS2322: Type '{ tag: "A"; d20: number; }' is not assignable to type 'ADT'.
  Type '{ tag: "A"; d20: number; }' is not assignable to type '{ tag: "A"; a1: string; }'.
    Property 'a1' is missing in type '{ tag: "A"; d20: number; }'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(12,1): error TS2322: Type '{ tag: "D"; }' is not assignable to type 'ADT'.
  Type '{ tag: "D"; }' is not assignable to type '{ tag: "D"; d20: 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 13 | 14 | 15 | 16 | 17 | 18 | 19 | 20; }'.
    Property 'd20' is missing in type '{ tag: "D"; }'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(30,1): error TS2322: Type '{ tag: "A"; x: string; y: number; }' is not assignable to type 'Ambiguous'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(33,28): error TS2322: Type '{ tag: "A"; x: string; extra: number; }' is not assignable to type 'Ambiguous'.
  Object literal may only specify known properties, and 'extra' does not exist in type 'Ambiguous'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(34,26): error TS2322: Type '{ tag: "A"; y: number; extra: number; }' is not assignable to type 'Ambiguous'.
  Object literal may only specify known properties, and 'extra' does not exist in type 'Ambiguous'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(39,1): error TS2322: Type '{ tag: "A"; }' is not assignable to type 'Ambiguous'.
  Type '{ tag: "A"; }' is not assignable to type '{ tag: "C"; }'.
    Types of property 'tag' are incompatible.
      Type '"A"' is not assignable to type '"C"'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(40,1): error TS2322: Type '{ tag: "A"; z: true; }' is not assignable to type 'Ambiguous'.
  Type '{ tag: "A"; z: true; }' is not assignable to type '{ tag: "C"; }'.
    Types of property 'tag' are incompatible.
      Type '"A"' is not assignable to type '"C"'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(49,1): error TS2322: Type '{ a: 1; b: 1; first: string; second: string; }' is not assignable to type 'Overlapping'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(50,1): error TS2322: Type '{ a: 1; b: 1; first: string; third: string; }' is not assignable to type 'Overlapping'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(62,7): error TS2322: Type '{ kind: "A"; n: { a: string; b: string; }; }' is not assignable to type 'AB'.
tests/cases/compiler/excessPropertyCheckWithUnions.ts(69,7): error TS2322: Type '{ kind: "A"; n: { a: string; c: string; }; }' is not assignable to type 'AB'.
  Type '{ a: string; c: string; }' is not assignable to type 'AN'.


==== tests/cases/compiler/excessPropertyCheckWithUnions.ts (11 errors) ====
    type ADT = {
        tag: "A",
        a1: string
    } | {
        tag: "D",
        d20: 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 13 | 14 | 15 | 16 | 17 | 18 | 19 | 20
    } | {
        tag: "T",
    }
    let wrong: ADT = { tag: "T", a1: "extra" }
    wrong = { tag: "A", d20: 12 }
    ~~~~~
!!! error TS2322: Type '{ tag: "A"; d20: number; }' is not assignable to type 'ADT'.
!!! error TS2322:   Type '{ tag: "A"; d20: number; }' is not assignable to type '{ tag: "A"; a1: string; }'.
!!! error TS2322:     Property 'a1' is missing in type '{ tag: "A"; d20: number; }'.
    wrong = { tag: "D" }
    ~~~~~
!!! error TS2322: Type '{ tag: "D"; }' is not assignable to type 'ADT'.
!!! error TS2322:   Type '{ tag: "D"; }' is not assignable to type '{ tag: "D"; d20: 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 13 | 14 | 15 | 16 | 17 | 18 | 19 | 20; }'.
!!! error TS2322:     Property 'd20' is missing in type '{ tag: "D"; }'.
    
    type Ambiguous = {
        tag: "A",
        x: string
    } | {
        tag: "A",
        y: number
    } | {
        tag: "B",
        z: boolean
    } | {
        tag: "C"
    }
    let amb: Ambiguous
    // no error for ambiguous tag, even when it could satisfy both constituents at once
    amb = { tag: "A", x: "hi" }
    amb = { tag: "A", y: 12 }
    amb = { tag: "A", x: "hi", y: 12 }
    ~~~
!!! error TS2322: Type '{ tag: "A"; x: string; y: number; }' is not assignable to type 'Ambiguous'.
    
    // correctly error on excess property 'extra', even when ambiguous
    amb = { tag: "A", x: "hi", extra: 12 }
                               ~~~~~~~~~
!!! error TS2322: Type '{ tag: "A"; x: string; extra: number; }' is not assignable to type 'Ambiguous'.
!!! error TS2322:   Object literal may only specify known properties, and 'extra' does not exist in type 'Ambiguous'.
    amb = { tag: "A", y: 12, extra: 12 }
                             ~~~~~~~~~
!!! error TS2322: Type '{ tag: "A"; y: number; extra: number; }' is not assignable to type 'Ambiguous'.
!!! error TS2322:   Object literal may only specify known properties, and 'extra' does not exist in type 'Ambiguous'.
    
    // assignability errors still work.
    // But note that the error for `z: true` is the fallback one of reporting on
    // the last constituent since assignability error reporting can't find a single best discriminant either.
    amb = { tag: "A" }
    ~~~
!!! error TS2322: Type '{ tag: "A"; }' is not assignable to type 'Ambiguous'.
!!! error TS2322:   Type '{ tag: "A"; }' is not assignable to type '{ tag: "C"; }'.
!!! error TS2322:     Types of property 'tag' are incompatible.
!!! error TS2322:       Type '"A"' is not assignable to type '"C"'.
    amb = { tag: "A", z: true }
    ~~~
!!! error TS2322: Type '{ tag: "A"; z: true; }' is not assignable to type 'Ambiguous'.
!!! error TS2322:   Type '{ tag: "A"; z: true; }' is not assignable to type '{ tag: "C"; }'.
!!! error TS2322:     Types of property 'tag' are incompatible.
!!! error TS2322:       Type '"A"' is not assignable to type '"C"'.
    
    type Overlapping =
        | { a: 1, b: 1, first: string }
        | { a: 2, second: string }
        | { b: 3, third: string }
    let over: Overlapping
    
    // these two are still errors despite their doubled up discriminants
    over = { a: 1, b: 1, first: "ok", second: "error" }
    ~~~~
!!! error TS2322: Type '{ a: 1; b: 1; first: string; second: string; }' is not assignable to type 'Overlapping'.
    over = { a: 1, b: 1, first: "ok", third: "error" }
    ~~~~
!!! error TS2322: Type '{ a: 1; b: 1; first: string; third: string; }' is not assignable to type 'Overlapping'.
    
    // Freshness disappears after spreading a union
    declare let t0: { a: any, b: any } | { d: any, e: any }
    declare let t1: { a: any, b: any, c: any } | { c: any, d: any, e: any }
    let t2 = { ...t1 }
    t0 = t2
    
    // Nested excess property checks work with discriminated unions
    type AN = { a: string } | { c: string }
    type BN = { b: string }
    type AB = { kind: "A", n: AN } | { kind: "B", n: BN }
    const abab: AB = {
          ~~~~
!!! error TS2322: Type '{ kind: "A"; n: { a: string; b: string; }; }' is not assignable to type 'AB'.
        kind: "A",
        n: {
            a: "a",
            b: "b", // excess -- kind: "A"
        }
    }
    const abac: AB = {
          ~~~~
!!! error TS2322: Type '{ kind: "A"; n: { a: string; c: string; }; }' is not assignable to type 'AB'.
!!! error TS2322:   Type '{ a: string; c: string; }' is not assignable to type 'AN'.
        kind: "A",
        n: {
            a: "a",
            c: "c", // ok -- kind: "A", an: { a: string } | { c: string }
        }
    }
    